src/components/projects/ProjectInfo.scss
.project-container {
    a {
        display: inline-block;
        color: inherit;
        text-decoration: none;
        text-decoration-skip-ink: auto;
      }
      
      button {
        border: 0;
        outline: 0;
        cursor: pointer;
      }
      
      ul,
      ol {
        padding: 0;
        margin: 0;
        list-style: none;
        overflow: visible;
      }
      
      svg {
        width: 100%;
        height: 100%;
        fill: currentColor;
      }
      
      img {
        width: 100%;
        max-width: 100%;
        vertical-align: middle;
      }
      
      @mixin outline {
        outline: 1px solid red;
      }
      
      @mixin flex-center {
        display: flex;
        justify-content: center;
        align-items: center;
      }
      
      @mixin flex-between {
        display: flex;
        justify-content: space-between;
      }
      
      @mixin tablet {
        @media (max-width: 600px) {
          @content;
          
          .project-container {
              .project-content {
                  .project-details {
                      ul {
                          display: initial;
                      }
                  }
              }
          }
        }
      }
      
      .project-container {
        max-width: 1000px;
        margin: 50px auto;
      }
      
      .project {
        margin: 30px;
        display: grid;
        grid-gap: 10px;
        grid-template-columns: repeat(12, 1fr);
        grid-template-rows: repeat(6, 1fr);
        align-items: center;
        
        @media screen and (max-width: 768px) {
          align-items: flex-start;
        }
      }
      
      .project-content {
        position: relative;
        grid-column: 1 / 7;
        grid-row: 1 / -1;
      
        @include tablet {
          grid-column: 1 / -1;
          padding: 40px;
        }
      
        .project-label {
          color: #fa5500;
          font-family: monospace;
        }
        .project-title {
          font-size: 2rem;
          margin: 10px 0 30px;
          color: #eee;
        }
        .project-title:hover {
            color: #d4d4d4;
        }
        .project-details {
          font-size: 15px;
          line-height: 1.5;
          color: #aaa;
          display: inline;
      
          p {
            background-color: #252525;
            padding: 20px 25px;
            @include tablet {
              background-color: transparent;
              padding: 20px 0;
            }
          }
      
          ul {
            display: flex;
            margin-top: 20px;
      
            li {
              margin-right: 20px;
              color: #aaa;
              font-family: monospace;
            }
          }
        }
      }
      
      .project-img {
        position: relative;
        z-index: -1;
        // background-color: #fa5500;
        // background: linear-gradient(0.4turn, #fa5500, #ffa600);
        border-radius: 2px;
        grid-column: 6 / -1;
        grid-row: 1 / -1;
      
        @media screen and (max-width: 768px) {
          height: 100%;
        }
        @include tablet {
          grid-column: 1 / -1;
          opacity: 0.25;
        }
      
        &:before {
          content: "";
          position: absolute;
          width: 100%;
          height: 100%;
          top: 0;
          left: 0;
          right: 0;
          bottom: 0;
          z-index: 3;
          background-color: #0a192f;
          mix-blend-mode: screen;
          border-radius: 2px;
        }
      
        img {
          border-radius: 2px;
          position: relative;
        //   mix-blend-mode: multiply;
        //   filter: grayscale(100%) contrast(1);
          cursor: pointer;
           
          @media screen and (max-width: 768px) {
            object-fit: cover;
            width: auto;
            height: 100%;
          }
        }

    }
    .link-icon, .github-icon {
        filter: invert(49%) sepia(93%) saturate(4848%) hue-rotate(5deg) brightness(99%) contrast(106%);
        margin-right: 10px;
        // margin-top: 10px;
        width: 35px;
        height: 35px;
    }

    .link-icon:hover, .github-icon:hover {
        filter: invert(74%) sepia(63%) saturate(6711%) hue-rotate(347deg) brightness(103%) contrast(101%);
    }
}
  
  
  

